--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
     <div class="container">
       <div class="top-box-container">
         <div class="columns one-third">
-          <h3><a href="http://www.quarrycrusher8.com/products/grinding/xzm-ultrafine-mill.html">Ultrafine Mill</a></h3>
+          <h3><a href="products/grinding/xzm-ultrafine-mill.html">Ultrafine Mill</a></h3>
           <p>Zenith Ultrafine Mill is widely used for micron powder producing. The output size can reach 2500mesh (5um).</p>
-          <p class="readmore"><a href="http://www.quarrycrusher8.com/products/grinding/">More</a></p>
+          <p class="readmore"><a href="products/grinding/">More</a></p>
         </div>
         <div class="columns one-third">
-          <h3><a href="http://www.quarrycrusher8.com/solutions/quarry-crusher.html">Quarry Crusher</a></h3>
+          <h3><a href="solutions/quarry-crusher.html">Quarry Crusher</a></h3>
           <p>Mobile quarry crushers are now widely used not only in quarry industry, but also in construction waste and municipal waste. </p>
-          <p class="readmore"><a href="http://www.quarrycrusher8.com/solutions/quarry-crusher.html">More</a></p>
+          <p class="readmore"><a href="solutions/quarry-crusher.html">More</a></p>
         </div>
         <div class="columns one-third">
-          <h3><a href="http://www.quarrycrusher8.com/products/crushing/sand-making-machine.html">Sand Making Machine</a></h3>
+          <h3><a href="products/crushing/sand-making-machine.html">Sand Making Machine</a></h3>
           <p>Sand Making Machine is a new generation and high effective product which introduces German technology, and owns many patent properties.</p>
-          <p class="readmore"><a href="http://www.quarrycrusher8.com/products/crushing/sand-making-machine.html">More</a></p>
+          <p class="readmore"><a href="products/crushing/sand-making-machine.html">More</a></p>
         </div>
         <div class="clear"></div>
       </div>
@@ -309,9 +309,9 @@
     <div class="copyright"> Shanghai Zenith Company &copy; 2000-2019 Copyrights.</div>
     <div id="sub-menu">
       <ul>
-        <li><a href="http://www.quarrycrusher8.com/solutions/quarry-crusher.html">Quarry Crusher</a></li>
-        <li><a href="http://www.quarrycrusher8.com/products/grinding/vertical-roller-mill-operation.html">Vertical Roller Mill</a></li>
-        <li><a href="http://www.quarrycrusher8.com/products/screeing-washing/lsx-sand-washing-machine.html">Sand Washing Machine</a></li>
+        <li><a href="solutions/quarry-crusher.html">Quarry Crusher</a></li>
+        <li><a href="products/grinding/vertical-roller-mill-operation.html">Vertical Roller Mill</a></li>
+        <li><a href="products/screeing-washing/lsx-sand-washing-machine.html">Sand Washing Machine</a></li>
         <li><a href="https://www.quarrycrusher8.com/solutions/grinding-mill-machine-in-cement-production.html
 ">Grinding Mill Machine</a></li>
       </ul>
